--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -3,80 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Support Tickets – Admin Panel</title>
+  <title>Admin Support – Tidyzenic</title>
   <link rel="stylesheet" href="/styles.css" />
+  <link rel="icon" href="/favicon.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
-<body class="bg-gray-100 text-gray-800">
+<body class="bg-gray-100 text-gray-800 flex min-h-screen">
 
-  <!-- Sidebar Container -->
-  <div id="sidebar-container"></div>
+  <!-- Sidebar (injected dynamically) -->
+  <div id="sidebar-container" class="z-40"></div>
 
-  <main class="ml-0 md:ml-64 px-4 py-8 transition-all">
-    <div class="max-w-6xl mx-auto">
-      <h1 class="text-3xl font-bold text-blue-700 mb-2">📨 Support Tickets</h1>
-
-      <!-- Admin Badge -->
-      <div class="bg-white border rounded-xl shadow p-4 mb-6 flex items-center space-x-4">
-        <div class="bg-blue-100 text-blue-700 px-3 py-1 rounded-full text-sm font-medium">
-          <span id="badgeName">Loading...</span>
+  <!-- Main content -->
+  <main class="flex-1 px-4 py-8 md:px-10 md:py-12 overflow-y-auto">
+    <div class="max-w-5xl mx-auto bg-white shadow-xl rounded-2xl p-6 md:p-10">
+      <div class="flex items-center justify-between mb-6">
+        <div>
+          <h1 class="text-3xl font-bold text-blue-700">📨 Support Tickets</h1>
+          <p class="text-gray-500 text-sm mt-1">Tickets submitted by users across the platform</p>
         </div>
-        <div class="text-sm text-gray-600">
-          <div><span id="badgeEmail">...</span></div>
-          <div><span id="badgeRole">...</span> at Tidyzenic</div>
+
+        <!-- Admin badge -->
+        <div class="flex items-center space-x-3 bg-gray-50 border rounded-lg px-4 py-2 shadow-inner">
+          <div class="text-right leading-tight">
+            <div id="adminName" class="font-semibold text-gray-800">Admin</div>
+            <div id="adminEmail" class="text-xs text-gray-500">email@example.com</div>
+          </div>
+          <div class="w-10 h-10 rounded-full bg-blue-600 text-white flex items-center justify-center text-sm font-bold">
+            <span id="adminInitial">A</span>
+          </div>
         </div>
       </div>
 
-      <!-- Support Ticket List -->
       <div id="supportTickets" class="space-y-6">
-        <p class="text-gray-500">Loading tickets...</p>
+        <!-- Tickets will be rendered here -->
       </div>
     </div>
   </main>
 
+  <!-- Sidebar backdrop (for mobile) -->
+  <div id="sidebarBackdrop" class="fixed inset-0 bg-black bg-opacity-40 hidden z-30"></div>
+
+  <!-- Scripts -->
   <script src="/js/auth-check.js"></script>
   <script src="/admin/js/load-sidebar.js"></script>
-
-  <script>
-    async function loadTickets() {
-      const container = document.getElementById('supportTickets');
-      try {
-        const res = await fetch('/api/support', { credentials: 'include' });
-        if (!res.ok) throw new Error('Failed to fetch tickets');
-        const tickets = await res.json();
-
-        if (!Array.isArray(tickets) || tickets.length === 0) {
-          container.innerHTML = '<p class="text-center text-gray-500">No support tickets found.</p>';
-          return;
-        }
-
-        container.innerHTML = tickets.map(ticket => `
-          <div class="bg-white p-5 rounded-xl shadow border border-gray-200">
-            <div class="flex justify-between items-center mb-2">
-              <h3 class="font-semibold text-lg text-blue-700">${ticket.subject}</h3>
-              <p class="text-sm text-gray-500">${new Date(ticket.created_at).toLocaleString()}</p>
-            </div>
-            <p class="text-sm text-gray-700 mb-2">${ticket.message}</p>
-            <div class="text-xs text-gray-500">
-              From: <strong>${ticket.user_name || 'Unknown'}</strong> (${ticket.user_email || 'No email'})
-            </div>
-          </div>
-        `).join('');
-      } catch (err) {
-        console.error('❌ Support fetch error:', err);
-        container.innerHTML = '<p class="text-red-600">Could not load support tickets.</p>';
-      }
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      // Fill admin badge
-      const u = window.currentUser || {};
-      document.getElementById('badgeName').textContent = u.name || 'Admin';
-      document.getElementById('badgeEmail').textContent = u.email || '';
-      document.getElementById('badgeRole').textContent = u.role?.toUpperCase() || '';
-
-      loadTickets();
-    });
-  </script>
+  <script src="/admin/js/support-page.js"></script>
 </body>
 </html>
