--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-white">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Support – Tidyzenic</title>
+  <title>Support – Admin View</title>
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
-<body class="bg-gray-100 text-gray-800 flex min-h-screen">
+<body class="min-h-screen font-inter flex flex-col bg-gradient-to-br from-blue-900 via-gray-900 to-black">
 
-  <!-- Sidebar (injected dynamically) -->
-  <div id="sidebar-container" class="z-40"></div>
+  <!-- Sidebar injected here -->
+  <div id="sidebar-container" class="md:w-64 fixed z-40 top-0 left-0 h-full hidden md:block"></div>
 
-  <!-- Main content -->
-  <main class="flex-1 px-4 py-8 md:px-10 md:py-12 overflow-y-auto">
-    <div class="max-w-5xl mx-auto bg-white shadow-xl rounded-2xl p-6 md:p-10">
-      <div class="flex items-center justify-between mb-6">
-        <div>
-          <h1 class="text-3xl font-bold text-blue-700">📨 Support Tickets</h1>
-          <p class="text-gray-500 text-sm mt-1">Tickets submitted by users across the platform</p>
+  <!-- Overlay backdrop for mobile -->
+  <div id="sidebarBackdrop" class="fixed inset-0 bg-black bg-opacity-60 z-30 hidden md:hidden"></div>
+
+  <!-- Hamburger menu -->
+  <button id="menuToggle" class="md:hidden fixed top-4 left-4 z-50 text-white">
+    <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2"
+         viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M4 6h16M4 12h16M4 18h16"/>
+    </svg>
+  </button>
+
+  <main class="md:ml-64 flex-1 p-6 pt-24 md:pt-10">
+    <div class="max-w-5xl mx-auto">
+      <div class="bg-white/10 backdrop-blur border border-white/10 p-6 rounded-2xl shadow-xl">
+        <div class="flex items-center justify-between mb-6">
+          <div>
+            <h1 class="text-3xl font-bold text-blue-400">📨 Support Tickets</h1>
+            <p class="text-sm text-gray-300 mt-1">All incoming support messages from users</p>
+          </div>
+          <div class="text-sm bg-blue-800 text-white px-4 py-2 rounded-xl shadow">
+            <span id="adminBadgeName">Admin</span> · <span id="adminBadgeEmail">email@example.com</span>
+          </div>
         </div>
 
-        <!-- Admin badge -->
-        <div class="flex items-center space-x-3 bg-gray-50 border rounded-lg px-4 py-2 shadow-inner">
-          <div class="text-right leading-tight">
-            <div id="adminName" class="font-semibold text-gray-800">Admin</div>
-            <div id="adminEmail" class="text-xs text-gray-500">email@example.com</div>
-          </div>
-          <div class="w-10 h-10 rounded-full bg-blue-600 text-white flex items-center justify-center text-sm font-bold">
-            <span id="adminInitial">A</span>
-          </div>
+        <div id="supportTickets" class="space-y-6">
+          <p class="text-gray-400 text-center">Loading tickets...</p>
         </div>
-      </div>
-
-      <div id="supportTickets" class="space-y-6">
-        <!-- Tickets will be rendered here -->
       </div>
     </div>
   </main>
 
-  <!-- Sidebar backdrop (for mobile) -->
-  <div id="sidebarBackdrop" class="fixed inset-0 bg-black bg-opacity-40 hidden z-30"></div>
-
-  <!-- Scripts -->
-  <script src="/js/auth-check.js"></script>
+  <script src="/admin/js/auth-check.js"></script>
   <script src="/admin/js/load-sidebar.js"></script>
   <script src="/admin/js/support-page.js"></script>
 </body>
