--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -44,7 +44,7 @@
     </div>
   </main>
 
-  <script src="/admin/js/auth-check.js"></script>
+<script src="/js/auth-check.js"></script>
   <script src="/admin/js/load-sidebar.js"></script>
   <script src="/admin/js/support-page.js"></script>
 </body>
