--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -1,53 +1,77 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-white">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Support – Admin View</title>
-  <link rel="stylesheet" href="/styles.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-</head>
-<body class="min-h-screen font-inter bg-gradient-to-br from-blue-900 via-gray-900 to-black">
+<html lang="en" class="h-full">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Support – Admin View</title>
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  </head>
 
-  <!-- Sidebar injected into this container -->
-  <div id="sidebar-container" class="md:w-64 fixed top-0 left-0 h-full z-40"></div>
-
-  <!-- Overlay for mobile -->
-  <div id="sidebarBackdrop" class="fixed inset-0 bg-black bg-opacity-60 z-30 hidden md:hidden"></div>
-
-  <!-- Hamburger for mobile -->
-  <button id="menuToggle" class="md:hidden fixed top-4 left-4 z-50 text-white">
-    <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2"
-         viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M4 6h16M4 12h16M4 18h16"/>
-    </svg>
-  </button>
-
-  <!-- Main Content -->
-  <main class="md:ml-64 flex-1 p-6 pt-24 md:pt-10 relative z-10">
-    <div class="max-w-5xl mx-auto">
-      <div class="bg-white/10 backdrop-blur border border-white/10 p-6 rounded-2xl shadow-xl mb-12">
-        <div class="flex items-center justify-between mb-6">
-          <div>
-            <h1 class="text-3xl font-bold text-blue-400">📨 Support Tickets</h1>
-            <p class="text-sm text-gray-300 mt-1">All incoming support messages from users</p>
-          </div>
-          <div class="text-sm bg-blue-800 text-white px-4 py-2 rounded-xl shadow">
-            <span id="adminBadgeName">Admin</span> · <span id="adminBadgeEmail">email@example.com</span>
-          </div>
-        </div>
-
-        <div id="supportTickets" class="space-y-6">
-          <p class="text-gray-400 text-center">Loading tickets...</p>
-        </div>
+  <body class="min-h-screen font-inter bg-gradient-to-br from-blue-900 via-gray-900 to-black text-white">
+    <!-- Mobile Header -->
+    <header class="md:hidden flex items-center justify-between p-4 bg-gray-900 shadow sticky top-0 z-50">
+      <div class="flex items-center space-x-2">
+        <button id="menuToggle" class="text-white focus:outline-none">
+          <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+        <span class="font-bold text-lg text-blue-400">Support</span>
       </div>
-    </div>
-  </main>
+    </header>
 
-  <!-- Scripts -->
-  <script src="/js/auth-check.js"></script>
-  <script src="/admin/js/load-sidebar.js"></script>
-  <script src="/admin/js/support-page.js"></script>
-</body>
+    <!-- Layout Container -->
+    <div class="flex min-h-screen">
+      <!-- Sidebar -->
+      <div id="sidebar-container"></div>
+
+      <!-- Mobile Backdrop -->
+      <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-60 hidden md:hidden"></div>
+
+      <!-- Main Content -->
+      <main class="flex-1 overflow-y-auto p-4 md:p-8">
+        <div class="max-w-5xl mx-auto">
+          <div class="bg-white/10 backdrop-blur border border-white/10 p-6 rounded-2xl shadow-xl mb-12">
+            <div class="flex items-center justify-between mb-6">
+              <div>
+                <h1 class="text-3xl font-bold text-blue-400">📨 Support Tickets</h1>
+                <p class="text-sm text-gray-300 mt-1">All incoming support messages from users</p>
+              </div>
+              <div class="text-sm bg-blue-800 text-white px-4 py-2 rounded-xl shadow">
+                <span id="adminBadgeName">Admin</span> · <span id="adminBadgeEmail">email@example.com</span>
+              </div>
+            </div>
+
+            <div id="supportTickets" class="space-y-6">
+              <p class="text-gray-400 text-center">Loading tickets...</p>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+
+    <!-- Scripts -->
+    <script src="/js/auth-check.js" defer></script>
+    <script src="/admin/js/load-sidebar.js" defer></script>
+    <script src="/admin/js/support-page.js" defer></script>
+
+    <!-- Sidebar Toggle Script -->
+    <script>
+      const menuToggle = document.getElementById('menuToggle');
+      const sidebar = document.getElementById('sidebar-container');
+      const backdrop = document.getElementById('sidebarBackdrop');
+
+      menuToggle?.addEventListener('click', () => {
+        sidebar.classList.toggle('hidden');
+        backdrop.classList.toggle('hidden');
+      });
+
+      backdrop?.addEventListener('click', () => {
+        sidebar.classList.add('hidden');
+        backdrop.classList.add('hidden');
+      });
+    </script>
+  </body>
 </html>
