--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -5,20 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Support – Admin View</title>
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
-  <body class="min-h-screen font-inter bg-gradient-to-br from-blue-900 via-gray-900 to-black text-white">
+  <body class="min-h-screen font-inter bg-gray-100 text-gray-900">
     <!-- Mobile Header -->
-    <header class="md:hidden flex items-center justify-between p-4 bg-gray-900 shadow sticky top-0 z-50">
+    <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-50">
       <div class="flex items-center space-x-2">
-        <button id="menuToggle" class="text-white focus:outline-none">
+        <button id="menuToggle" class="text-gray-700 focus:outline-none">
           <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </button>
-        <span class="font-bold text-lg text-blue-400">Support</span>
+        <span class="font-bold text-lg text-blue-600">Support</span>
       </div>
     </header>
 
@@ -28,7 +31,7 @@
       <div id="sidebar-container" class="hidden md:block z-40"></div>
 
       <!-- Mobile Backdrop -->
-      <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-60 hidden md:hidden"></div>
+      <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
       <!-- Main Content -->
       <main class="flex-1 overflow-y-auto p-4 md:p-8 relative z-10">
@@ -36,10 +39,10 @@
           <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl mb-12">
             <div class="flex items-center justify-between mb-6">
               <div>
-                <h1 class="text-3xl font-bold text-blue-600">📨 Support Tickets</h1>
+                <h1 class="text-3xl font-bold text-blue-700">📨 Support Tickets</h1>
                 <p class="text-sm text-gray-600 mt-1">All incoming support messages from users</p>
               </div>
-              <div class="text-sm bg-blue-800 text-white px-4 py-2 rounded-xl shadow">
+              <div class="text-sm bg-blue-100 text-blue-800 px-4 py-2 rounded-xl shadow">
                 <span id="adminBadgeName">Admin</span> · <span id="adminBadgeEmail">email@example.com</span>
               </div>
             </div>
