--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -28,7 +28,7 @@
     <!-- Layout Container -->
     <div class="flex min-h-screen relative">
       <!-- Sidebar -->
-      <div id="sidebar-container" class="hidden md:block z-40"></div>
+<div id="sidebar-container" class="z-40 fixed md:relative inset-y-0 left-0 w-72 transform transition-transform duration-300 ease-in-out -translate-x-full md:translate-x-0"></div>
 
       <!-- Mobile Backdrop -->
       <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
