--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -22,7 +22,7 @@
   ">
 </head>
 
-<body class="min-h-screen font-sans bg-gray-100 text-gray-900">
+<body class="min-h-screen font-inter bg-gray-100 text-gray-900">
   <!-- Mobile Header -->
   <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-50">
     <div class="flex items-center space-x-2">
@@ -46,13 +46,13 @@
     <!-- Main -->
     <main class="flex-1 overflow-y-auto p-4 md:p-8 relative z-10">
       <div class="max-w-5xl mx-auto">
-        <div class="glass-card mb-12">
+        <div class="bg-white p-6 rounded-2xl shadow-xl mb-12">
           <div class="flex items-center justify-between mb-6">
             <div>
               <h1 class="text-3xl font-bold text-blue-700">📨 Support Tickets</h1>
               <p class="text-sm text-gray-600 mt-1">All incoming support messages from users</p>
             </div>
-            <div class="badge">
+            <div class="text-sm bg-blue-100 text-blue-800 px-4 py-2 rounded-xl shadow">
               <span id="adminBadgeName">Admin</span> · <span id="adminBadgeEmail">email@example.com</span>
             </div>
           </div>
@@ -74,8 +74,8 @@
       <p id="replyModalSubject" class="text-sm text-gray-500 mb-4"></p>
       <textarea id="replyMessage" rows="5" class="w-full border rounded-lg p-2 text-sm text-gray-700 mb-4" placeholder="Type your reply..."></textarea>
       <div class="flex justify-end space-x-2">
-        <button id="closeReplyBtn" class="btn-pill btn-delete">Cancel</button>
-        <button id="submitReplyBtn" class="btn-pill btn-reply">Send Reply</button>
+        <button id="closeReplyBtn" class="px-4 py-2 text-gray-600 hover:underline">Cancel</button>
+        <button id="submitReplyBtn" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Send Reply</button>
       </div>
     </div>
   </div>
