--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,7 +1,7 @@
 <!-- public/admin/sidebar.html -->
 <aside
   id="sidebar"
-  class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col pt-32"
+  class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col pt-8"
 >
   <!-- Logo & Business Name -->
   <div class="logo-section p-6 flex items-center space-x-3 sticky top-0 bg-white border-b shadow z-10">
@@ -29,7 +29,7 @@
     <a href="/admin/discounts.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏷️ Discounts</a>
     <a href="/admin/settings.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚙️ Settings</a>
     <a href="/admin/billing.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧾 Billing</a>
-    <a href="/admin/reports.html" class="block px-4 py-2 rounded hover:bg-blue-50" data-role="admin">📊 Reports</a> <!-- Admin-only -->
+    <a href="/admin/reports.html" class="block px-4 py-2 rounded hover:bg-blue-50" data-role="admin">📊 Reports</a>
     <a href="/admin/support.html" class="block px-4 py-2 rounded hover:bg-blue-50">🆘 Support</a>
     <a href="/admin/zapier.html" class="block px-4 py-2 rounded hover:bg-blue-50">⚡ Automations</a>
     <a href="/admin/ai-assistant.html" class="block px-4 py-2 rounded hover:bg-blue-50">🤖 AI Assistant</a>
