--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -1,15 +1,17 @@
+<!-- public/admin/sidebar.html -->
 <aside
   id="sidebar"
-  class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col pt-16 md:pt-8"
+  class="fixed md:relative inset-y-0 left-0 z-40 w-72 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out flex flex-col pt-8"
 >
   <!-- Logo & Business Name -->
   <div class="logo-section p-6 flex items-center space-x-3 sticky top-0 bg-white border-b shadow z-10">
     <img id="logo" src="/assets/logo-placeholder.png" alt="Logo" class="w-10 h-10 rounded-full shadow-md" />
     <div>
       <h1 id="bizName" class="text-lg font-bold uppercase truncate text-blue-600">Business</h1>
-      <p id="sidebarUserName" class="text-sm text-gray-500"></p>
+      <p id="sidebarUserName" class="text-sm text-gray-500"></p> <!-- 👤 Username placeholder -->
     </div>
   </div>
+
   <!-- Navigation -->
   <div class="flex-1 overflow-y-auto p-4 space-y-1 font-medium text-gray-700">
     <a href="/admin/dashboard.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏠 Dashboard</a>
