--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -3,26 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Support – Admin View</title>
+  <title>Support – Admin Dashboard</title>
 
-  <!-- Fonts & Styles -->
+  <!-- Tailwind + Custom Styles -->
   <link rel="stylesheet" href="/styles.css" />
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
-  <!-- Security: CSP -->
+  <!-- Admin ID injected dynamically -->
+  <meta name="admin-id" content="{{ADMIN_ID}}" />
+
+  <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self';
+    script-src 'self' 'unsafe-inline';
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     font-src 'self' https://fonts.gstatic.com;
     img-src 'self' data:;
-    connect-src 'self' https://*.tidyzenic.com;
+    connect-src 'self' ws://localhost:* http://localhost:*;
   ">
 </head>
 
 <body class="min-h-screen font-inter bg-gray-100 text-gray-900">
+
   <!-- Mobile Header -->
   <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-50">
     <div class="flex items-center space-x-2">
@@ -35,66 +41,34 @@
     </div>
   </header>
 
-  <!-- Layout Wrapper -->
+  <!-- Layout -->
   <div class="flex min-h-screen relative">
+    
     <!-- Sidebar -->
-    <div id="sidebar-container"></div>
+    <aside id="sidebar-container" class="hidden md:block w-64 bg-white shadow-lg z-40">
+      <!-- Your sidebar content can be injected dynamically here -->
+    </aside>
+
+    <!-- Sidebar backdrop for mobile -->
     <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
     <!-- Main Content -->
-    <main class="flex-1 overflow-y-auto p-4 md:p-8 relative z-10">
-      <div class="max-w-5xl mx-auto">
-        <section class="bg-white p-6 rounded-2xl shadow-xl mb-12">
-          <div class="flex items-center justify-between mb-6">
-            <div>
-              <h1 class="text-3xl font-bold text-blue-700">📨 Support Tickets</h1>
-              <p class="text-sm text-gray-600 mt-1">All incoming support messages from users</p>
-            </div>
-            <div class="text-sm bg-blue-100 text-blue-800 px-4 py-2 rounded-xl shadow">
-              <span id="adminBadgeName">Admin</span> · <span id="adminBadgeEmail">email@example.com</span>
-            </div>
-          </div>
-
-          <input
-            id="ticketSearch"
-            type="text"
-            placeholder="Search tickets..."
-            class="w-full md:w-1/3 mb-6 px-4 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-200"
-          />
-
-          <div id="supportTickets" class="space-y-6">
-            <p class="text-gray-600 text-center">Loading tickets...</p>
+    <main class="flex-1 overflow-y-auto p-4 md:p-8 z-10 relative">
+      <div class="max-w-6xl mx-auto">
+        <section class="bg-white p-6 rounded-2xl shadow-xl">
+          <h2 class="text-2xl font-bold mb-6">Support Tickets</h2>
+          <div id="ticket-list" class="space-y-6">
+            <!-- Tickets will be dynamically loaded here -->
           </div>
         </section>
       </div>
     </main>
   </div>
 
-  <!-- Reply Modal -->
-  <div id="replyModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
-    <div class="bg-white rounded-xl p-6 w-full max-w-md shadow-xl">
-      <h3 class="text-lg font-semibold text-gray-800 mb-2">Reply to Ticket</h3>
-      <p id="replyModalSubject" class="text-sm text-gray-500 mb-4"></p>
-      <textarea
-        id="replyMessage"
-        rows="5"
-        class="w-full border rounded-lg p-2 text-sm text-gray-700 mb-4"
-        placeholder="Type your reply..."></textarea>
-      <div class="flex justify-end space-x-2">
-        <button id="closeReplyBtn" class="px-4 py-2 text-gray-600 hover:underline">Cancel</button>
-        <button id="submitReplyBtn" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Send Reply</button>
-      </div>
-      <p id="replyError" class="text-sm text-red-600 mt-2 hidden"></p>
-    </div>
-  </div>
-
-  <!-- Toast Notification -->
-  <div id="toast" class="opacity-0 pointer-events-none"></div>
-
   <!-- Scripts -->
-  <script src="/js/auth-check.js" defer></script>
-  <script src="/admin/js/load-sidebar.js" defer></script>
-  <script src="/admin/js/toast.js" defer></script>
-  <script src="/admin/js/support-page.min.js" defer></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/admin/js/support.js" defer></script>
+  <script src="/admin/js/support-page.js" defer></script>
+
 </body>
 </html>
