--- a/public/admin/support.html
+++ b/public/admin/support.html
@@ -3,32 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Support – Admin Dashboard</title>
+  <title>Support – Admin View</title>
 
-  <!-- Tailwind + Custom Styles -->
+  <!-- Fonts & Styles -->
   <link rel="stylesheet" href="/styles.css" />
-
-  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 
-  <!-- Admin ID injected dynamically -->
+  <!-- Optional: Injected admin ID (from session/server) -->
   <meta name="admin-id" content="{{ADMIN_ID}}" />
 
-  <!-- Content Security Policy -->
+  <!-- Security: CSP -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self' 'unsafe-inline';
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     font-src 'self' https://fonts.gstatic.com;
     img-src 'self' data:;
-    connect-src 'self' ws://localhost:* http://localhost:*;
+    connect-src 'self';
   ">
+
+  <!-- Scripts -->
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/admin/js/support.js" defer></script>
 </head>
 
 <body class="min-h-screen font-inter bg-gray-100 text-gray-900">
-
   <!-- Mobile Header -->
   <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-50">
     <div class="flex items-center space-x-2">
@@ -41,34 +42,21 @@
     </div>
   </header>
 
-  <!-- Layout -->
+  <!-- Layout Wrapper -->
   <div class="flex min-h-screen relative">
-    
-    <!-- Sidebar -->
-    <aside id="sidebar-container" class="hidden md:block w-64 bg-white shadow-lg z-40">
-      <!-- Your sidebar content can be injected dynamically here -->
-    </aside>
-
-    <!-- Sidebar backdrop for mobile -->
+    <!-- Sidebar (load via JS or include directly) -->
+    <div id="sidebar-container"></div>
     <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
     <!-- Main Content -->
-    <main class="flex-1 overflow-y-auto p-4 md:p-8 z-10 relative">
-      <div class="max-w-6xl mx-auto">
-        <section class="bg-white p-6 rounded-2xl shadow-xl">
+    <main class="flex-1 overflow-y-auto p-4 md:p-8 relative z-10">
+      <div class="max-w-5xl mx-auto">
+        <section class="bg-white p-6 rounded-2xl shadow-xl mb-12">
           <h2 class="text-2xl font-bold mb-6">Support Tickets</h2>
-          <div id="ticket-list" class="space-y-6">
-            <!-- Tickets will be dynamically loaded here -->
-          </div>
+          <div id="ticket-list" class="space-y-6"></div>
         </section>
       </div>
     </main>
   </div>
-
-  <!-- Scripts -->
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/admin/js/support.js" defer></script>
-  <script src="/admin/js/support-page.js" defer></script>
-
 </body>
 </html>
