--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -30,38 +30,39 @@
       </div>
     </header>
 
-    <!-- Main Layout -->
+    <!-- Layout -->
     <div class="flex min-h-screen">
       <!-- Sidebar -->
       <div id="sidebar-container"></div>
 
-      <!-- Backdrop for Mobile Sidebar -->
+      <!-- Mobile backdrop -->
       <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
-      <!-- Main Content -->
+      <!-- Main content -->
       <main class="flex-1 overflow-y-auto p-4 md:p-8">
         <div class="max-w-5xl mx-auto">
-          <!-- Page Header -->
-          <div class="flex items-center justify-between mb-4">
+          <!-- Header -->
+          <div class="flex items-center justify-between mb-6">
             <h1 class="text-2xl font-semibold text-blue-700">Support Tickets</h1>
-
-            <!-- Notifications -->
             <div class="relative">
               <button id="notifBtn" class="relative p-2 rounded-full hover:bg-gray-200">
                 🔔
                 <span id="notifCount" class="absolute -top-1 -right-1 bg-red-500 text-white text-xs rounded-full w-5 h-5 flex items-center justify-center hidden">0</span>
               </button>
               <div id="notifDropdown" class="absolute right-0 mt-2 w-64 bg-white shadow-lg rounded-lg hidden z-50">
-                <ul id="notifList" class="divide-y divide-gray-200 max-h-64 overflow-y-auto">
-                  <!-- Notifications will appear here -->
-                </ul>
+                <ul id="notifList" class="divide-y divide-gray-200 max-h-64 overflow-y-auto"></ul>
               </div>
             </div>
           </div>
 
           <!-- Ticket List -->
           <div id="ticketList" class="space-y-4">
-            <!-- Tickets will be dynamically inserted here -->
+            <!-- Tickets inserted dynamically -->
+          </div>
+
+          <!-- Empty state -->
+          <div id="emptyState" class="hidden text-center text-gray-500 mt-10">
+            <p>No support tickets yet. New ones will appear here.</p>
           </div>
         </div>
       </main>
