--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -1,3 +1,4 @@
+<!-- public/admin/support_ticket.html -->
 <!DOCTYPE html>
 <html lang="en" class="h-full bg-gray-100 text-gray-900">
   <head>
@@ -35,10 +36,10 @@
       <!-- Sidebar -->
       <div id="sidebar-container"></div>
 
-      <!-- Mobile backdrop -->
+      <!-- Mobile Backdrop -->
       <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
-      <!-- Main content -->
+      <!-- Main Content -->
       <main class="flex-1 overflow-y-auto p-4 md:p-8">
         <div class="max-w-5xl mx-auto">
           <!-- Header -->
@@ -55,17 +56,37 @@
             </div>
           </div>
 
-          <!-- Ticket List -->
-          <div id="ticketList" class="space-y-4">
-            <!-- Tickets inserted dynamically -->
+          <!-- Search Bar -->
+          <div class="mb-6">
+            <input
+              type="text"
+              id="ticketSearch"
+              placeholder="Search tickets..."
+              class="w-full px-4 py-2 border rounded shadow-sm focus:outline-none focus:ring"
+            />
           </div>
 
-          <!-- Empty state -->
+          <!-- Ticket List -->
+          <div id="ticketList" class="space-y-4"></div>
+
+          <!-- Empty State -->
           <div id="emptyState" class="hidden text-center text-gray-500 mt-10">
-            <p>No support tickets yet. New ones will appear here.</p>
+            <p>No support tickets found.</p>
           </div>
         </div>
       </main>
+    </div>
+
+    <!-- Modal -->
+    <div id="ticketModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center">
+      <div class="bg-white w-full max-w-lg p-6 rounded shadow-lg relative">
+        <button id="modalClose" class="absolute top-2 right-2 text-gray-500 hover:text-black text-xl">&times;</button>
+        <h2 id="modalTitle" class="text-xl font-semibold mb-4">Reply to Ticket</h2>
+        <textarea id="modalTextarea" rows="5" class="w-full p-3 border rounded resize-none focus:outline-none focus:ring"></textarea>
+        <div class="mt-4 text-right">
+          <button id="modalSubmit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Submit</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
