--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -1,4 +1,3 @@
-<!-- public/admin/support_ticket.html -->
 <!DOCTYPE html>
 <html lang="en" class="h-full bg-gray-100 text-gray-900">
   <head>
@@ -6,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Support Tickets – Tidyzenic Admin</title>
 
-    <!-- Styles -->
+    <!-- Local Tailwind build -->
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
 
     <!-- Scripts -->
     <script defer src="/socket.io/socket.io.js"></script>
